# django-api-backend

./: .editorconfig  .env.example  .gitignore  manage.py  pyproject.toml
.agents/skills/django-api-backend-dev/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: production.yml
accounts/: apps.py  authentication.py  models.py  permissions.py  schema.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
commons/: api.py  models.py
commons/management/commands/: promote_to_admin.py
config/: asgi.py  env.py  urls.py  wsgi.py
config/django/: base.py
config/django/local/: api.py
config/settings/: clerk.py
healthz/: urls.py
