[project]
name = "django-api-backend-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.1",
    "clerk-backend-api>=5.0.6",
    "django>=6.0.4",
    "django-autoslug>=1.9.9",
    "django-environ>=0.13.0",
    "django-filter>=25.2",
    "django-guardian>=3.3.1",
    "django-storages>=1.14.6",
    "django-tasks-db>=0.12.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "ruff>=0.15.12",
]
prod = [
    "gunicorn>=25.3.0",
    "psycopg[binary]>=3.3.3",
    "redis>=7.4.0",
]
